--- a/quillsniw.css
+++ b/quillsniw.css
@@ -1,7 +1,7 @@
 .ql-container {
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 13px;
+  font-size: 16px;
   height: 100%;
   margin: 0px;
   position: relative;
@@ -30,6 +30,7 @@
   height: 100%;
   outline: none;
   overflow-y: auto; 
+  overflow-y: hidden; 
   padding: 12px 15px;
   tab-size: 4;
   -moz-tab-size: 4;
